examples/failing/ExportConflictTypeOp/A.purs
module A where

type T1 a b = a -> b

infixr 4 type T1 as ??
